[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webmux"
version = "1.0.0"
description = "Browser-based tmux terminal client"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Leo Chang"}]
dependencies = ["aiohttp>=3.9"]

[project.scripts]
webmux = "webmux:main"

[project.urls]
Homepage = "https://github.com/LeoTiunn/webmux"
